Fix scrollbar and height

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,6 @@ body::-webkit-scrollbar {
 }
 body::-webkit-scrollbar-track {
   background-color: rgb(47, 34, 45);
-  width: 15px;
 }
 body::-webkit-scrollbar-thumb {
   background-image: linear-gradient(45deg, rgb(155, 120, 226) 0%, rgb(244, 39, 255));
